[package]
name = "wynd-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmrs = "0.9.0"
bip32 = "0.4.0"
bip39 = { version="1.0.1", features=["rand"] }
rayon = "1.5.3"

[profile.release]
lto = true
